integrate youssef