@@ -25,9 +25,11 @@ import tn.esprit.easytripdesktopapp.utils.UserSession;
 import java.io.File;
 import java.io.IOException;
 import java.net.URL;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Locale;
 import java.util.ResourceBundle;
+import java.util.stream.Collectors;
 
 public class AfficherOfferTravelController implements Initializable {
 
@@ -37,6 +39,14 @@ public class AfficherOfferTravelController implements Initializable {
     private FlowPane cardContainer;
     @FXML
     private ComboBox<String> offerComboBox; // Liste déroulante pour filtrer par destination
+    @FXML
+    private ComboBox<String> agencyComboBox; // Liste déroulante pour filtrer par agence
+    @FXML
+    private ComboBox<String> categoryComboBox; // Liste déroulante pour filtrer par catégorie
+    @FXML
+    private ComboBox<String> promotionComboBox;
+    @FXML
+    private DatePicker startDatePicker; // Doit correspondre à fx:id="startDatePicker" dans le FXML// Liste déroulante pour filtrer par promotion
     @FXML
     private TextField searchField;
     private List<OfferTravel> allOffers;
@@ -48,21 +58,52 @@ public class AfficherOfferTravelController implements Initializable {
         searchField.textProperty().addListener((observable, oldValue, newValue) -> handleSearch());
 
         offerComboBox.setOnAction(event -> filterOffers());
+        agencyComboBox.setOnAction(event -> filterOffers());
+        categoryComboBox.setOnAction(event -> filterOffers());
+        promotionComboBox.setOnAction(event -> filterOffers());
+        startDatePicker.setOnAction(event -> filterOffers());
+
+        loadComboBoxes();
     }
 
     private void loadData() {
         allOffers = offerService.getAll();
-        loadComboBox();
+        loadComboBoxes();
         loadOffers(allOffers);
     }
 
-    private void loadComboBox() {
+    private void loadComboBoxes() {
         offerComboBox.getItems().clear();
         offerComboBox.getItems().add("Toutes les destinations"); // Option pour afficher tout
         for (OfferTravel offer : allOffers) {
             offerComboBox.getItems().add(offer.getDestination());
         }
         offerComboBox.getSelectionModel().selectFirst();
+
+        agencyComboBox.getItems().clear();
+        agencyComboBox.getItems().add("Toutes les agences"); // Option pour afficher tout
+        for (OfferTravel offer : allOffers) {
+            if (offer.getAgence() != null) {
+                agencyComboBox.getItems().add(offer.getAgence().getNom());
+            }
+        }
+        agencyComboBox.getSelectionModel().selectFirst();
+
+        categoryComboBox.getItems().clear();
+        categoryComboBox.getItems().add("Toutes les catégories"); // Option pour afficher tout
+        for (OfferTravel offer : allOffers) {
+            categoryComboBox.getItems().add(String.valueOf(offer.getCategory()));
+        }
+        categoryComboBox.getSelectionModel().selectFirst();
+
+        promotionComboBox.getItems().clear();
+        promotionComboBox.getItems().add("Toutes les promotions"); // Option pour afficher tout
+        for (OfferTravel offer : allOffers) {
+            if (offer.getPromotion() != null) {
+                promotionComboBox.getItems().add(offer.getPromotion().getTitle());
+            }
+        }
+        promotionComboBox.getSelectionModel().selectFirst();
     }
 
     private void loadOffers(List<OfferTravel> offers) {
@@ -108,17 +149,22 @@ public class AfficherOfferTravelController implements Initializable {
         return card;
     }
 
-
     @FXML
     private void filterOffers() {
         String selectedDestination = offerComboBox.getValue();
+        String selectedAgency = agencyComboBox.getValue();
+        String selectedCategory = categoryComboBox.getValue();
+        String selectedPromotion = promotionComboBox.getValue();
+        LocalDate selectedStartDate = startDatePicker.getValue();
 
-        if (selectedDestination == null || selectedDestination.equals("Toutes les destinations")) {
-            loadOffers(allOffers);
-            return;
-        }
+        java.sql.Date startSqlDate = (selectedStartDate != null) ? java.sql.Date.valueOf(selectedStartDate) : null;// Récupérez la date sélectionnée
 
-        List<OfferTravel> filteredOffers = allOffers.stream().filter(o -> o.getDestination().equals(selectedDestination)).toList();
+        List<OfferTravel> filteredOffers = allOffers.stream()
+                .filter(o -> selectedDestination == null || selectedDestination.equals("Toutes les destinations") || o.getDestination().equals(selectedDestination))
+                .filter(o -> selectedAgency == null || selectedAgency.equals("Toutes les agences") || (o.getAgence() != null && o.getAgence().getNom().equals(selectedAgency)))
+                .filter(o -> selectedCategory == null || selectedCategory.equals("Toutes les catégories") || o.getCategory().equals(selectedCategory))
+                .filter(o -> selectedPromotion == null || selectedPromotion.equals("Toutes les promotions") || (o.getPromotion() != null && o.getPromotion().getTitle().equals(selectedPromotion)))
+                .filter(o -> startSqlDate == null || (o.getDeparture_date() != null && (o.getDeparture_date().after(startSqlDate) || o.getDeparture_date().equals(startSqlDate))))                .collect(Collectors.toList());
 
         loadOffers(filteredOffers);
     }
@@ -126,7 +172,9 @@ public class AfficherOfferTravelController implements Initializable {
     @FXML
     private void handleSearch() {
         String keyword = searchField.getText().toLowerCase().trim();
-        List<OfferTravel> filteredOffers = allOffers.stream().filter(o -> o.getDestination().toLowerCase().contains(keyword)).toList();
+        List<OfferTravel> filteredOffers = allOffers.stream()
+                .filter(o -> o.getDestination().toLowerCase().contains(keyword))
+                .collect(Collectors.toList());
         loadOffers(filteredOffers);
     }
 
@@ -174,44 +222,14 @@ public class AfficherOfferTravelController implements Initializable {
         Button btnReserver = new Button("Réserver");
         btnReserver.getStyleClass().add("button-reserver");
         btnReserver.setOnAction(event -> {
-            try {
-                FXMLLoader loader = new FXMLLoader(getClass().getResource("/tn/esprit/easytripdesktopapp/FXML/Reservation/addreservation.fxml"));
-                Parent root = loader.load();
-                Addreservation detailController = loader.getController();
-                detailController.setOffer(offer);
-                Stage stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
-                stage.setScene(new Scene(root));
-                stage.setTitle("Reservation Screen");
-                stage.show();
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-        });
-
-        Button btnFeedback = new Button("Soumettre un Feedback");
-        btnFeedback.getStyleClass().add("button-reserver");
-        btnFeedback.setOnAction(event -> {
-            try {
-                FXMLLoader loader = new FXMLLoader(getClass().getResource("/tn/esprit/easytripdesktopapp/FXML/Client/FeedbackUser.fxml"));
-                Parent root = loader.load();
-
-                FeedbackUser detailController = loader.getController();
-                detailController.setOfferTravel(offer);
-
-                Stage stage = new Stage();
-                stage.setTitle("Détails de l'hôtel");
-                stage.setScene(new Scene(root));
-                stage.show();
-            } catch (IOException e) {
-                e.printStackTrace();
-                showAlert("Erreur", "Erreur lors du chargement des détails de l'hôtel.");
-            }
-
+            // Logique pour réserver l'offre
+            System.out.println("User Id : " + session.getUser().getId());
+            System.out.println("Offre réservée : " + offer.getDestination());
+            detailAlert.close(); // Fermer la boîte de dialogue après la réservation
         });
 
         // Ajouter le bouton au VBox
         vbox.getChildren().add(btnReserver);
-        vbox.getChildren().add(btnFeedback);
 
         // Définir le VBox comme contenu de l'Alert
         detailAlert.getDialogPane().setContent(vbox);
@@ -225,7 +243,6 @@ public class AfficherOfferTravelController implements Initializable {
         System.out.println("Réservation effectuée pour l'offre : " + offer.getId());
         // Ajoutez votre logique de réservation ici (par exemple, ouvrir une nouvelle fenêtre ou appeler un service)
     }
-
 
     public void goBack(ActionEvent actionEvent) {
         Stage stage;
